app/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: app
spec:
  replicas: 2
  strategy:
    canary:
      canaryService: infra-dashboard-api-canary
      stableService: infra-dashboard-api-stable
      trafficRouting:
        istio:
          virtualService:
            name: infra-dashboard-api-vsvc
            routes:
            - primary
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 20}
      - setWeight: 60
      - pause: {duration: 20}
      - setWeight: 80
      - pause: {duration: 20}
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: gcr.io/retail-364515/infra-dashboard-api
        volumeMounts:
          - name: config-volume
            mountPath: /app/env_settings.py
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
      volumes:
        - name: config-volume
          configMap:
            name: infra-dashboard-api-configmap
