app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-dashboard-api-svc
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: infra-dashboard-api-canary
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: app
---
apiVersion: v1
kind: Service
metadata:
  name: infra-dashboard-api-stable
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: app
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: infra-dashboard-api-vsvc
spec:
  gateways:
  - istio-rollout-gateway
  hosts:
  - api.infra.adeptmind.net
  http:
  - name: primary
    route:
    - destination:
        host: infra-dashboard-api-stable
      weight: 100
    - destination:
        host: infra-dashboard-api-canary
      weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
 name: istio-rollout-gateway
spec:
 selector:
   istio: ingressgateway # use Istio default gateway implementation
 servers:
 - port:
     number: 80
     name: http
     protocol: HTTP
   hosts:
   - "app.infra-dashboard-api.api.adeptmind.net"
---
apiVersion: v1
kind: Service
metadata:
  name: infra-dashboard-api-lb
spec:
  type: LoadBalancer
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: app
