app/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-vsvc
spec:
  gateways:
  - app-gateway
  hosts:
  - infra-onboarding-api.adeptmind.net
  - app
  http:
  - name: primary
    route:
    - destination:
        host: stable
      weight: 100
    - destination:
        host: canary
      weight: 0
